@@ -54,6 +54,20 @@ Table.prototype._makeBulk = function _makeBulk () {
   for (let i = 0; i < this.columns.length; i++) {
     const col = this.columns[i]
     switch (col.type) {
+      case TYPES.DateTime:
+      case TYPES.DateTime2:
+        for (let j = 0; j < this.rows.length; j++) {
+          let dateValue = this.rows[j][i]
+          if (typeof dateValue === 'string' || typeof dateValue === 'number') {
+            let date = new Date(dateValue)
+            if (isNaN(date.getDate())) {
+              throw new TypeError('Invalid date value passed to bulk rows')
+            }
+            this.rows[j][i] = new Date(dateValue)
+          }
+        }
+        break
+
       case TYPES.Xml:
         col.type = TYPES.NVarChar(MAX).type
         break
