@@ -121,6 +121,7 @@ describe('tedious', () => {
 
     it('bulk load (table)', done => TESTS['bulk load']('bulk_table', done))
     it('bulk load (temporary table)', done => TESTS['bulk load']('#anohter_bulk_table', done))
+    it('bulk converts dates', done => TESTS['bulk converts dates'](done))
 
     after(done => sql.close(done))
   })
